[project]
name = "floodwatch"
version = "1.3.1"
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["SIM105"]

[tool.ruff.format]
quote-style = "preserve"
